[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/background.png" type="Texture" id=1]
[ext_resource path="res://fonts/phonetic.tres" type="Theme" id=2]
[ext_resource path="res://art/back.png" type="Texture" id=3]
[ext_resource path="res://GooseGameNormal.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ImgBorel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 128.0
custom_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ImgBorel"]
margin_left = 429.0
margin_right = 595.0
margin_bottom = 128.0

[node name="Speak" type="Button" parent="MarginContainer/VBoxContainer/ImgBorel/VBoxContainer"]
margin_right = 166.0
margin_bottom = 62.0
theme = ExtResource( 2 )
text = "Parle"

[node name="Record" type="Button" parent="MarginContainer/VBoxContainer/ImgBorel/VBoxContainer"]
margin_top = 66.0
margin_right = 166.0
margin_bottom = 128.0
theme = ExtResource( 2 )
text = "Enregistre"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1024.0
margin_bottom = 132.0

[node name="gridImage" type="GridContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 512.0
margin_right = 512.0
custom_constants/vseparation = 90
custom_constants/hseparation = 90
columns = 8

[node name="Back" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 102.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/ImgBorel/VBoxContainer/Speak" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ImgBorel/VBoxContainer/Record" to="." method="_on_Record_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
